revamp how-to pages

--- a/src/how-to/metal.html
+++ b/src/how-to/metal.html
@@ -5,64 +5,62 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Metal</title>
-  <link href="/css/home-page.css" rel="stylesheet" type="text/css" />
+  <link href="../css/home-page.css" rel="stylesheet" type="text/css" />
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <link rel="manifest" href="../manifest.json">
 </head>
-
-
 <body>
 
   <div class="flex-col content-box">
     <a href="../index.html" class="flex-row pub-btn">
       <img src="../imgs/arrow.png" style="height: 15px; rotate: 180deg;">
-      <div class="light-text pub-btn-text">
-        Back to home
-      </div>
     </a>
 
-    <div class="title-1" style="margin-bottom: 15px; margin-top: 15px"> What to do with: Metal </div> <br>
-    <div class="regular-text" style="margin-bottom: 30px;"> For the most part, metal can be recycled, but there some
+    <hr>
+
+    <div class="article-title"> What to do with: Metal </div> <br>
+
+    <div class="flex-col ss-img-box article-img">
+      <img src="../imgs/metal-recycling.jpeg" style="width: 100%">
+    </div>
+
+    <br>
+
+    <div class="article-text">
+      For the most part, metal can be recycled, but there some
       exceptions where it should be in the garbage. The following guidelines apply to the City of Kirkland and should
-      apply broadly to other cities as well: </div>
+      apply broadly to other cities as well.
 
-    <div class="flex-col ss-img-box">
-      <img src="../imgs/metal-cans.jpeg" style="width:60%">
-    </div>
-    <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Metal Cans </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> Aluminum and tin cans are recyclable, but only recycle metal
-      lids that are larger than three inches.
     </div>
 
-    <div class="flex-col ss-img-box">
-      <img src="../imgs/scrap-metal.jpg" style="width:40%">
-    </div>
-    <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Scrap Metal </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> Scrap metal needs to fit specific dimensions to be recycled.
+    <div class="article-heading"> Metal Cans </div>
+    <div class="article-text"> Aluminum and tin cans are recyclable, but only recycle metal
+      lids that are larger than three inches. </div>
+
+    <div class="article-heading"> Scap Metal </div>
+    <div class="article-text"> Scrap metal needs to fit specific dimensions to be recycled.
       Scrap metal put in your blue recycling bin should be larger than three inches, but no longer than 2 feet. If your
       metal is too large, find a local scrap mill or US designated transfer station for the metal. For more specific
       guidelines, see the following page:
-
+    
       <a
-        href="https://www.kirklandwa.gov/Government/Departments/Public-Works-Department/Solid-Waste-Services/Recycle/Beyond-the-Cart/Appliances-and-Scrap-Metal">
-        Metal Guidelines
+      href="https://www.kirklandwa.gov/Government/Departments/Public-Works-Department/Solid-Waste-Services/Recycle/Beyond-the-Cart/Appliances-and-Scrap-Metal">
+      Metal Guidelines
       </a>
 
     </div>
 
-    <div class="flex-col ss-img-box">
-      <img src="../imgs/pie-tray.jpg" style="width:40%">
+    <div class="flex-col ss-img-box article-img">
+      <img src="../imgs/metal-recycling-process.webp" style="width: 100%">
     </div>
-    <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Foil and pie trays </div>
-    <div class="regular-text" style="margin-bottom: 30px;">Tin foil / aluminum foil and pie trays are NOT recyclable in
-      Kirkland, although they are recyclable in some larger cities like Seattle, so be sure to check local guidelines.
-    </div>
+    <div class="article-heading"> Foil and pie trays </div>
+    <div class="article-text"> Tin foil / aluminum foil and pie trays are NOT recyclable in
+      Kirkland, although they are recyclable in some larger cities like Seattle, so be sure to check local guidelines. 
+    Furthermore, thin food wrappers with a shiny/aluminium apperance should typically be thrown away.</div>
 
-
-
-
-
-
+    <div class="article-heading"> Outside Kirkland? </div>
+    <div class="article-text" style="margin-bottom: 100px;"> If you live in a city other than Kirkland, these guidelines
+      should still mostly apply (with the exception of tin foil and pie trays, which can be recyclable elsewhere).</div>
 
   </div>
 
