--- a/src/how-to/plastic.html
+++ b/src/how-to/plastic.html
@@ -9,68 +9,73 @@
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <link rel="manifest" href="../manifest.json">
 </head>
-
-
 <body>
 
   <div class="flex-col content-box">
     <a href="../index.html" class="flex-row pub-btn">
       <img src="../imgs/arrow.png" style="height: 15px; rotate: 180deg;">
-      <div class="light-text pub-btn-text">
-        Back to home
-      </div>
     </a>
 
-    <div class="title-1" style="margin-bottom: 15px; margin-top: 15px;"> What to do with: Plastic </div> <br>
-    <div class="regular-text" style="margin-bottom: 15px;">
+    <hr>
+
+    <div class="article-title"> What to do with: Plastic </div> <br>
+
+    <div class="flex-col ss-img-box article-img">
+      <img src="../imgs/recycline-intro-img.webp" style="width: 100%">
+    </div>
+
+    <br>
+
+    <div class="article-text">
       Plastic is very often a tricky thing to recycle. The most important thing to remember is that the recycling symbol
       does not always mean you can recycle it in your cart. Guidelines for that can be found here:
 
-      <a href="https://www.acmeplastics.com/content/your-guide-to-plastic-recycling-symbols/">
-        https://www.acmeplastics.com/content/your-guide-to-plastic-recycling-symbols/.
+      <a style="padding-left: 20px; padding-right: 20px" href="https://www.acmeplastics.com/content/your-guide-to-plastic-recycling-symbols/">
+        Visit site.
       </a>
 
     </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> In short, #1 (PETE) or #2 (HDPE) are the most recycled plastics and accepted everywhere. Plastics #3 , #4, #5, #6
+    <div class="article-text" style="margin-bottom: 30px;"> In short, #1 (PETE) or #2 (HDPE) are the most recycled plastics and accepted everywhere. Plastics #3 , #4, #5, #6
       and #7 are usually not acceptable at recycling plants. The number is shown in recycling triangle. </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> For the city of Kirkland specifically, the following applies: </div>
 
-    <div class="flex-col ss-img-box">
-      <img src="/imgs/plastic-bottles.png" style="width:30%">
-    </div>
-    <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Bottles and Jugs </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> Ensure that the item does not contain substantial residue
+      <div class="flex-col ss-img-box article-img">
+        <img src="../imgs/plastic-types.png" style="width: 100%">
+      </div>
+
+      <br>
+
+    <div class="article-text"> For the city of Kirkland specifically, the following applies: </div>
+
+    <div class="article-heading"> Bottles & Jugs </div>
+    <div class="article-text"> Ensure that the item does not contain substantial residue
       from its contents, and then recycle the bottle. Make sure to screw the cap back on before recycling. </div>
 
-    <div class="flex-col ss-img-box">
-      <img src="/imgs/plastic-container.png" style="width: 30%">
-    </div>
-    <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Tubs (Yogurt or Dairy) </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> Plastic tubs follow a similar protocol as bottles and jugs,
+    <div class="article-heading"> Tubs (Yogurt or Dairy) </div>
+    <div class="article-text"> Plastic tubs follow a similar protocol as bottles and jugs,
       but they do not contain recyclable lids. Even if the lid fits tightly ensure that you throw it away in the trash
       before recycling the container. Rinse if necessary to remove residue. </div>
+<br>
 
-
-    <div class="flex-col ss-img-box">
-      <img src="/imgs/plastic-cups.png" style="width: 30%">
+    <div class="flex-col ss-img-box article-img">
+      <img src="../imgs/recycle-by-shape.png" style="width: 100%">
     </div>
-    <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Cups </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> Plastic cups are recyclable. </div>
+    <div class="article-heading"> Cups </div>
+    <div class="article-text"> Plastic cups are recyclable. </div>
 
 
-    <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Miscellaneous soft plastics, food
+    <div class="article-heading"> Miscellaneous soft plastics, food
       serviceware, and wrappers </div>
-    <div class="regular-text" style="margin-bottom: 15px;"> Wrappers, chip bags, takeout bags, plastic utensils, straws,
+    <div class="article-text" style="margin-bottom: 15px;"> Wrappers, chip bags, takeout bags, plastic utensils, straws,
       and hygiene items (tissues, protective gloves, face masks) are NOT recyclable, and should be put in the garbage.
     </div>
-    <div class="regular-text" style="margin-bottom: 15px;"> Dirty items containing food or liquid, dirty paper, and
+    <div class="article-text" style="margin-bottom: 15px;"> Dirty items containing food or liquid, dirty paper, and
       plastic trays/clamshells are also not recyclable. </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> Please note that you don’t need to scrub with soap and
+    <div class="article-text"> Please note that you don’t need to scrub with soap and
       water! Just a rinse is usually enough to have your plastics accepted at a recycling plant. </div>
 
 
-    <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Outside Kirkland? </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> If you live in a city other than Kirkland, the recycling
+    <div class="article-heading"> Outside Kirkland? </div>
+    <div class="article-text" style="margin-bottom: 100px;"> If you live in a city other than Kirkland, the recycling
       guidelines should stay similar with only slight variations. For the most part, bigger cities have more recycling
       capabilities. Check with the guidelines linked above if you are confused. </div>
 
