--- a/src/how-to/glass.html
+++ b/src/how-to/glass.html
@@ -9,25 +9,26 @@
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <link rel="manifest" href="../manifest.json">
 </head>
-
-
 <body>
 
   <div class="flex-col content-box">
     <a href="../index.html" class="flex-row pub-btn">
       <img src="../imgs/arrow.png" style="height: 15px; rotate: 180deg;">
-      <div class="light-text pub-btn-text">
-        Back to home
-      </div>
     </a>
 
-    <img src="../imgs/glass-pane-real.png" style="width: 50%; margin: 20px 20px 20px 0px">
-    
-    <div class="title-1" style="margin-bottom: 15px;"> What to do with: Glass </div> <br>
-    <div class="regular-text" style="margin-bottom: 30px;"> Glass products are almost always recyclable, but their lids almost never are! For glass jars ensure that your lids are disposed of (even metal lids are not recyclable unless given the appropriate stamp). For glass bottles, ensure that you remove all caps unless they are recyclable metal. </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> The exceptions to this rule are sheet glass and small pieces of broken glass, which should be put in the garbage.
+    <hr>
+
+    <div class="article-title"> What to do with: Glass </div> <br>
+
+    <div class="flex-col ss-img-box article-img">
+      <img src="../imgs/glass-recycling.jpeg" style="width: 100%">
     </div>
 
+    <div class="article-text"> Glass products are almost always recyclable, but their lids almost never are! For glass jars ensure that your lids are disposed of (even metal lids are not recyclable unless given the appropriate stamp). For glass bottles, ensure that you remove all caps unless they are recyclable metal. </div>
+    <div class="article-text" style="margin-bottom: 100px">The exceptions to this rule are sheet glass and small pieces of broken glass, which should be put in the garbage. </div>
+
+
+  </div>
 
 </body>
 
