--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
   
         <div class="flex-row shadow-box chall-box">
           <div class="flex-col chall-img-box">
-            <img alt="Plastic bottle" style="height: 89px;" src="imgs/camera-icon.jpg">
+            <img alt="Camera icon" style="height: 89px;" src="imgs/camera-icon.jpg">
           </div>
   
           <div class="flex-col chall-col">
@@ -127,6 +127,26 @@
           </div>
         </div>
       </div>
+
+
+      <div id="ai-tips">
+        <div class="heading-1">
+         AI Scanner: Tips & Tricks
+        </div>
+  
+        <a href="how-to/ai-tips.html" class="flex-row shadow-box chall-box" style="text-decoration: none">
+          <div class="flex-col chall-img-box">
+            <img alt="AI icon" style="height: 89px;" src="imgs/ai-icon.jpg">
+          </div>
+  
+          <div class="flex-col chall-col">
+            <p class="instructions-text chall-text">
+              Click to learn how to use our AI-scanning tool effectively.
+            </p>
+          </div>
+        </a>
+      </div>
+
 
 
       <div class="heading-1">
