--- a/src/how-to/e-waste.html
+++ b/src/how-to/e-waste.html
@@ -8,6 +8,52 @@
   <link href="../css/home-page.css" rel="stylesheet" type="text/css" />
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <link rel="manifest" href="../manifest.json">
+  <style>
+    .article-text {
+      color: #000;
+      font-family: 'Roboto Serif', serif;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 300;
+      line-height: 35px;
+      margin-bottom: 15px;
+    }
+    .article-title {
+      color: #000;
+      font-family: Roboto;
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      margin-bottom: 15px; 
+      margin-top: 15px;
+      font-weight: bold;
+    }
+
+    .article-heading {
+      color: #000;
+      font-family: 'Roboto Serif', serif;
+      font-size: 18px;
+      font-weight: bold;
+      line-height: 35px;
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
+
+    .article-img {
+      margin-bottom: 15px;
+    }
+
+    hr {
+        display: block; /* Ensure it's set to display as a block element */
+        height: 0.9px;    /* Set a height to make it visible */
+        background-color: #787878; /* Set a background color if it's not visible due to color */
+        z-index:100;
+        width: 100%;
+        outline: none;
+        border: none;
+    }
+  </style>
 </head>
 <body>
 
