add message about load times

--- a/src/scan.html
+++ b/src/scan.html
@@ -180,14 +180,29 @@
       </div>
     </div>
 
-  
-    <div class="flex-col chall-col" style="position: fixed; top: 36%; left: 18%;" id="loading-text">
-    <div class="light-text" style="font-size:14pt">
-      Loading model...
-    </div>
-  </div>
-  
+    
+    <div id="loading-text">
 
+      <div class="flex-col chall-col" style="position: fixed; top: 36%; left: 18%;">
+        <div class="light-text" style="font-size:14pt">
+          Loading model...
+        </div>
+      </div>
+  
+      <div class="flex-col chall-col" style="position: fixed; top: 50%; left: 18%;">
+        <div class="light-text" style="font-size:14pt">
+          This might take a few minutes the first time. Please be patient.
+        </div>
+      </div>
+  
+      <div class="flex-col chall-col" style="position: fixed; top: 60%; left: 18%;">
+        <div class="light-text" style="font-size:14pt">
+          It will be faster from here on, we promise!
+        </div>
+      </div>
+
+    </div>
+  
 
   <video id="webcam" autoPlay playsInline muted></video>
   <canvas id="canvas" style="display: none;"></canvas>
