small CSS adjustments

--- a/src/login.html
+++ b/src/login.html
@@ -16,7 +16,7 @@
     <img src="/imgs/fingerprint.jpg" alt="image" class="signup-img">
 
 
-    <div class="header-1">
+    <div class="header-1" style="font-size:30px; margin-top:0; margin-bottom:15px">
       Login
     </div>
 
@@ -42,7 +42,7 @@
   </a>
 
 
-    <div class="flex-row" style="justify-content: center; margin-top: 50px">
+    <div class="flex-row" style="justify-content: center; margin-top: 10px; margin-bottom: 100px">
       <div class="light-text" style="margin-left: 4px; font-size:15px;">
         By continuing you agree to our
       </div>
