--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,10 @@
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
+
+    body {
+      margin: 0;
+    }
   </style>
 </head>
 
